tests/fail/encap_method_priv.stderr
error[E0437]: Method 'drop' is private to 'string' and cannot be accessed from module 'encap_method_priv'
 --> tests/fail/encap_method_priv.tk:20:6
    |
 20 |     s.drop()
    |      ^
error[E0443]: Cannot modify immutable entity 'Method 'drop' requires explicit mutable argument (use '#')'
 --> tests/fail/encap_method_priv.tk:20:6
    |
 20 |     s.drop()
    |      ^
